--- a/mean.html
+++ b/mean.html
@@ -6,6 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    vineeth
+    <h2 style="text-align: center;">Mean stack</h2>
+    <img src="mongo.svg" height="250" width="250" title="it is a mongo db logo">
+    <img src="express.png" height="250" width="250" title="it is a expressjs logo">
+    <img src="js.jpg" height="250" width="250" title="it is a angularjs logo">
+    <img src="nodejs.png" height="250" width="250" title="it is a nodejs logo">
 </body>
 </html>
